tests/errors/extraneous_function_decl.ceos
fn foo<T>(n: T) -> T { n }(1){  }
